--- a/src/components/TopHistoryTrack/TopHistoryTrack.scss
+++ b/src/components/TopHistoryTrack/TopHistoryTrack.scss
@@ -60,6 +60,20 @@
   flex: 1;
 }
 
+.artist__genres {
+  color:$mid-grey;
+  text-align: left;
+  font-size: 0.7em;
+  text-transform: capitalize; }
+
+.order-number {
+  flex: 12px 0 0;
+  text-align: right;
+  margin-right: 20px;
+  font-weight: bold;
+  color:$mid-grey;
+  font-size: 0.85em; }
+
 @media (min-width: $breakpoint-small) {
   .track-history__item {
     padding: 1em 1.5em;
