--- a/src/components/ListPage/ListPage.scss
+++ b/src/components/ListPage/ListPage.scss
@@ -29,6 +29,12 @@
   top: -1.15vw;
 }
 
+.list-page__subtitle {
+  position: relative;
+  z-index: 2;
+  color: #3a354e;
+  top: 1.15vw; }
+
 .list-page__content {
   position: relative;
   z-index: 3;
@@ -38,23 +44,6 @@
 
   margin: 0 -1.5em;
   padding: 20px 1.5em;
-
-  &:before {
-    content: '';
-    display: block;
-    position: absolute;
-    left: 0;
-    right: 0;
-    overflow-x: hidden;
-    top: -7vw;
-    height: 10vw;
-
-    background: #fff;
-    z-index: 3;
-    transform: translate3d(0, 0, 0) skewY(-3deg);
-    // Better anti-aliasing on mobile chrome with transparent outline rule
-    outline: 1px solid transparent;
-  }
 }
 
 .list-page__list {
