--- a/src/components/ListPage/ListPage.scss
+++ b/src/components/ListPage/ListPage.scss
@@ -33,7 +33,9 @@
   position: relative;
   z-index: 2;
   color: #3a354e;
-  top: 1.15vw; }
+  top: 1.15vw;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: white; }
 
 .list-page__content {
   position: relative;
