--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,7 +2,7 @@
   height: 60px;
   padding: 0 10px;
   display: block;
-  color: #e550a7;
+  color: #1ed760;
   position: fixed;
   left: 0;
   right: 0;
