--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -12,14 +12,13 @@ $light-grey: #fafafa;
 $bg-grey: #f9f9f9;
 $black: #000;
 
-$brand-primary: #e550a7;
+$brand-primary: #1ed760;
 $brand-dark: darken($dark-grey, 10%);
 $brand-success: green;
 $brand-alert: yellow;
 $brand-danger: red;
 
-$brand-pink: #f9adac;
-$brand-green: #9ee2d9;
+$brand-green: #1ed760;
 $brand-blue: #5d42e5;
 
 // # Element Sizes
