--- a/src/containers/LoginView/LoginView.css
+++ b/src/containers/LoginView/LoginView.css
@@ -1,7 +1,7 @@
 .login {
   text-align: left;
   padding: 0 2em;
-  background: #f9adac;
+  background: #1ed760;
   overflow: hidden;
   display: flex;
   justify-content: flex-start;
@@ -14,8 +14,8 @@
 
 .login__title {
   color: #fff;
-  margin: 10vh 0 50vh;
-  padding: 0; }
+  margin: 10vh 0 0;
+  padding: 33vh 0; }
 
 .login__app-icon {
   display: none; }
@@ -60,7 +60,7 @@
     z-index: 99;
     opacity: 0.9;
     display: block;
-    color: #9ee2d9;
+    color: #1ed760;
     font-weight: 900; }
     .login__app-icon img {
       max-width: 60px; } }
@@ -76,11 +76,11 @@
     padding: 0 15%;
     overflow-y: auto; }
   .login__title {
-    margin-bottom: 45vh; } }
+    margin-bottom: -5vh; } }
 
 @media (min-width: 769px) and (orientation: landscape) {
   .login__title {
     color: #fff;
-    margin: 10vh 0 65vh; }
+    margin: 10vh 0 -5vh; }
   .btn-link {
     text-align: center; } }
