fixed bug in css

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -18,6 +18,7 @@ $brand-success: green;
 $brand-alert: yellow;
 $brand-danger: red;
 
+$brand-pink: #1ed760;
 $brand-green: #1ed760;
 $brand-blue: #5d42e5;
 
