--- a/src/components/AppIcon/AppIcon.css
+++ b/src/components/AppIcon/AppIcon.css
@@ -1,12 +1,12 @@
 .appicon {
   display: block;
-  color: #f9adac;
+  color: #1ed760;
   margin: 0;
   font-weight: 900;
   position: relative; }
   .appicon img {
     width: 66px; }
   .appicon.appicon--default {
-    color: #f9adac; }
+    color: #1ed760; }
   .appicon.appicon--white {
     color: white; }
