--- a/src/containers/LoginView/LoginView.css
+++ b/src/containers/LoginView/LoginView.css
@@ -2,7 +2,7 @@
   text-align: left;
   padding: 0 2em;
   background: #1ed760;
-  overflow: hidden;
+  overflow: auto;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
