--- a/src/containers/LoginView/LoginView.scss
+++ b/src/containers/LoginView/LoginView.scss
@@ -5,7 +5,7 @@
   padding: 0 2em;
   background: $brand-green;
 
-  overflow: hidden;
+  overflow: auto;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
